--- a/main.html
+++ b/main.html
@@ -108,6 +108,8 @@
                 <a href="#" class="link"><img src="./img/Play Market.png" alt="Play Market Icon"></a>
             </div>
         </div>
+        <hr>
+        <p class="fnav__copyright">© PhyzzMars </p>
     </footer>
 
 
