--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/main.css">
+    <script src="./app.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>PhyzzMars</title>
 </head>
 <body>
@@ -15,12 +17,17 @@
                 <img src="./img/logo.png" alt="Logo" class="nav__img">
                 <h3 class="nav__title">PhyzzMars</h3>
             </div>
-            <ul class="nav-list">
+            <ul class="nav-list topnav" id="myTopnav">
                 <a href="#" class="link"><li class="nav__item">Bosh sahifa</li></a>
                 <a href="#" class="link"><li class="nav__item">Loyiha</li></a>
                 <a href="#" class="link"><li class="nav__item">Ma'lumot</li></a>
                 <a href="#" class="link"><li class="nav__item">Aloqa</li></a>
             </ul>
+            <!-- <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <svg javascript:void(0); onclick="myFunction()" class="check-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M0 96C0 78.33 14.33 64 32 64H416C433.7 64 448 78.33 448 96C448 113.7 433.7 128 416 128H32C14.33 128 0 113.7 0 96zM0 256C0 238.3 14.33 224 32 224H416C433.7 224 448 238.3 448 256C448 273.7 433.7 288 416 288H32C14.33 288 0 273.7 0 256zM416 448H32C14.33 448 0 433.7 0 416C0 398.3 14.33 384 32 384H416C433.7 384 448 398.3 448 416C448 433.7 433.7 448 416 448z"/></svg>
+            <!-- </label> --> 
+            <button class="info__btn nav__btn">Boshlash</button>
         </nav>
     </section>
 
